langtools/test/tools/javac/7129225/TestImportStar.ref
RUNNING...
RUNNING...
TestImportStar.java:37:1: compiler.err.doesnt.exist: xxx
